2000-11-12  Clint Adams  <schizo@debian.org>

	* unposted: Completion/Debian/_bug: fix thinkos, add new options
	for reportbug.

	* unposted: Completion/Debian/_bug: complete files for --include=,
	completion for querybts.

2000-11-11  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 13109, 13111: Doc/Zsh/mod_zle.yo, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c, Src/signals.c: `zle -I' allows trap code
	to clear up display when output occurs in a trap.

	* Sven: 13108: Src/Modules/zftp.c, Src/Modules/zpty.c,
	Src/Zle/zle_main.c, Src/builtin.c, Src/exec.c, Src/init.c,
	Src/input.c, Src/jobs.c, Src/signals.c, Src/signals.h,
	Src/utils.c, Src/zsh.h: Execute user traps synchronously if it is
	unsafe to execute it directly from the signal handler.

2000-11-09  Clint Adams  <schizo@debian.org>

	* 13125: Completion/User/_mailboxes: evaluate the mailboxes
	directives in muttrc, in case of backticks.

2000-11-08  Bart Schaefer  <schaefer@zsh.org>
	* 13140: Src/utils.c: Believe the non-error not-ready return value
	from select(), in read_poll().
	
2000-11-08  Sven Wischnowsky  <wischnow@zsh.org>

	* unposted: Src/Modules/zpty.c: use possible read character from
	read_poll() in loop in ptyread()

	* 13128: Completion/Builtins/_zstyle, Completion/Core/_match,
 	Completion/Core/_path_files, Doc/Zsh/compsys.yo: aloow value
 	`pattern' for insert-unambiguous style to preserve patterns in the
 	original string; add list-suffixes style to make file completion
 	list path suffixes if possible; slightly improved completion of
 	pathnames with multiple pattern-components

2000-11-06  Bart Schaefer  <schaefer@zsh.org>

	* 13127: Completion/User/_rcs: Test of $compstate[nmatches] was a
	no-op, removed it.

2000-11-05  Bart Schaefer  <schaefer@zsh.org>

	* 13124: Functions/Misc/nslookup: Use "command nslookup" as it's
	now possible to call the nslookup function recursively from zpty.

	* unposted: Src/Modules/zpty.c: Cloned shell is non-interactive